@startuml
'https://plantuml.com/class-diagram

class User{
    -score:int
    -userName:String
    -time:int
    +User(int score, String userName, String time)
    +getScore():int
    +setScore(int score):void
    +getUserName():String
    +setUserName(String userName):void
    +getTime():String
    +setTime(String time):void
}

interface UserDao{
    +{abstract} getAllUsers(): List<User>
    +{abstract} doAdd(User):void
    +{abstract} update():void
    +{abstract} doDelete(int num):void
}

class UserDaoImpl{
    -users:List<User>
    +UserDaoImpl(int gameLevel)
    +getAllUsers(): List<User>
    +doAdd(User):void
    +update():void
    +doDelete(int num):void
}

UserDao <|.. UserDaoImpl
User <-- UserDaoImpl

@enduml